--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "npm install --legacy-peer-deps && npm run your-build-script",
+    "dev": "next dev --turbo",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.1",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "mongoose": "^8.8.3",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "next": "^13.5.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
